--- a/curso-javascript-front-senai-main/25_06/index.html
+++ b/curso-javascript-front-senai-main/25_06/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeiro arquivo - Código HTML</title>
 </head>
+
 <body>
-    <header><h1></h1></header>
+    <header>
+        <h1>Código HTML</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, explicabo. Sit ratione officiis dolorem
+            id quisquam explicabo ipsa neque doloremque iure enim? Iure perspiciatis accusantium nihil quas deserunt.
+            Itaque, alias.</p>
+    </header>
+
+    <!-- ctrl + k + c  -->
+    <div>
+        <h1>Seja bem vindo!</h1>
+        <strong>Lista:</strong>
+        <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Nemo esse itaque tempore quia laboriosam nam
+            vero libero repellat tempora nostrum ipsa, veritatis magnam quae vitae voluptate sint! Asperiores, deleniti
+            corporis!</span>
+    </div>
+
+
+
 </body>
+
 </html>
