--- a/curso-javascript-front-senai-main/25_06/index.html
+++ b/curso-javascript-front-senai-main/25_06/index.html
@@ -25,7 +25,16 @@
             corporis!</span>
     </div>
 
+    <hr>
 
+    <h2>Times</h2>
+    <ul>
+        <li>Corinthians</li>
+        <li>Vasco</li>
+        <li>Ponte preta</li>
+        <li>Santos</li>
+        <li>sp</li>
+    </ul>
 
 </body>
 
