--- a/curso-javascript-front-senai-main/25_06/index.html
+++ b/curso-javascript-front-senai-main/25_06/index.html
@@ -37,6 +37,17 @@
         <li>pormeiras</li>
     </ul>
 
+
+    <hr>
+
+    <h2>Filmes</h2>
+    <ol>
+        <li>Senhor que da o anel</li>
+        <li>Harry potes</li>
+        <li>morbit</li>
+        <li>A pedra cheiradofal</li>
+        <li>o cálice do bafo de fogo</li>
+    </ol>
 </body>
 
 </html>
