--- a/curso-javascript-front-senai-main/25_06/index.html
+++ b/curso-javascript-front-senai-main/25_06/index.html
@@ -16,6 +16,8 @@
     </header>
 
     <!-- ctrl + k + c  -->
+
+    <!-- Aula focada em git e github -->
     <div>
         <h1>Seja bem vindo!</h1>
         <strong>Lista:</strong>
