--- a/curso-javascript-front-senai-main/27_06/sistema-aluno/index.html
+++ b/curso-javascript-front-senai-main/27_06/sistema-aluno/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema - Aluno</title> 
+    <title>Sistema - Aluno</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <h1>Sistema Aluno</h1>
 
-        <form>
+        <form class="form">
             <div class="form-control">
                 <input type="text" id="nota" placeholder="Digite sua nota" />
             </div>
             <button> Verificar </button>
         </form>
     </div>
-    
-<script src="script.js"> </script>
+
+    <script src="script.js"> </script>
 </body>
+
 </html>
